--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ishit",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "image Search from Human Input Text",
   "main": "dist/electron/main.js",
   "scripts": {
     "prettier": "prettier --write \"./src/**/*.{ts,json}\"",
     "build:ts": "tsc",
-    "build:client": "browserify dist/client/app.js -o dist/client-bundle.js --no-browser-field --no-builtins && copy \".\\src\\index.html\" \".\\dist\\index.html\"",
+    "build:client": "browserify dist/client/app.js -o dist/client-bundle.js --no-browser-field --no-builtins",
     "build:css": "sass src/client/style:dist/client/style",
     "minify": "node minify.js",
     "build": "npm run prettier && npm run build:ts && npm run build:client && npm run build:css && npm run minify",
