--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "ishit",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "image Search from Human Input Text",
   "main": "dist/electron/main.js",
   "scripts": {
     "prettier": "prettier --write \"./src/**/*.{ts,json}\"",
-    "build:ts": "tsc",
-    "build:client": "browserify dist/client/app.js -o dist/client-bundle.js --no-browser-field --no-builtins",
-    "build:css": "sass src/client/style:dist/client/style && copy \".\\dist\\client\\style\\bootstrap.css\" \".\\dist\\style.css\"",
-    "minify": "node minify.js",
-    "build": "npm run prettier && npm run build:ts && npm run build:client && npm run build:css && npm run minify",
+    "tsc": "npm run export-package && tsc",
+    "browserify": "browserify dist/client/app.js -o dist/client-bundle.js --no-browser-field --no-builtins",
+    "sass": "sass src/client/style:dist/client/style && copy \".\\dist\\client\\style\\bootstrap.css\" \".\\dist\\style.css\"",
+    "minify": "node minify.js dist/client-bundle.js",
+    "export-package": "node export_json.js ./package.json src/package.min.json name,version",
+    "build": "npm run prettier && npm run tsc && npm run browserify && npm run sass && npm run minify",
     "dev": "npm run build && npm start",
     "local": "electron dist/electron/main.js",
     "start": "electron-forge start",
