--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "ishit",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "image Search from Human Input Text",
   "main": "dist/electron/main.js",
   "scripts": {
     "prettier": "prettier --write \"./src/**/*.{ts,json}\"",
     "tsc": "npm run export-package && tsc",
     "browserify": "browserify dist/client/app.js -o dist/client-bundle.js --no-browser-field --no-builtins",
-    "sass": "sass src/client/style:dist/client/style && copy \".\\dist\\client\\style\\bootstrap.css\" \".\\dist\\style.css\"",
+    "sass": "sass --no-source-map src/client/style/style.scss:dist/style.css",
     "minify": "node minify.js dist/client-bundle.js",
     "export-package": "node export_json.js ./package.json src/package.min.json name,version",
     "build": "npm run prettier && npm run tsc && npm run browserify && npm run sass && npm run minify",
-    "dev": "npm run build && npm start",
+    "dev": "npm run tsc && npm run browserify && npm run sass && npm start",
     "local": "electron dist/electron/main.js",
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -26,7 +26,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta3",
     "browserify": "^17.0.0",
     "electron": "^12.0.2",
     "prettier": "^2.2.1",
